# kharma-network-radar

./: .gitignore  Dockerfile  KHARMA_LAUNCHER.bat  LICENSE  MANIFEST.in  README.md  bandit_all_final.txt  bandit_check.txt  bandit_check_b105.txt  bandit_final.txt  bandit_final_check.json  bandit_final_text.txt  bandit_full.txt  bandit_full_report.txt  bandit_ll_v.txt  bandit_main_full.txt  bandit_main_utf8.txt  bandit_out.txt  bandit_raw.txt  bandit_report.html  bandit_report.txt  bandit_result.json  bandit_stderr.txt  bandit_stdout.txt  bandit_verbose.txt  build_log_temp.txt  debian_build_log.txt  debug_dashboard.json  debug_radar.json  error_log.txt  get_trace.py  hash.txt  headers.txt  index.html  kharma.rb  pyproject.toml  requirements.txt  run_log.txt  runs.json  runs_utf8.json  (+9 more)
.github/workflows/: debian-build.yml  docker-publish.yml  publish.yml  snap-publish.yml  windows-build.yml
debian/: changelog  control  copyright
docs/marketing/: AWESOME_LISTS.md  DEV_ARTICLE.md  LAUNCH_KIT.md  (+1 more)
kharma/: __init__.py  asn_blocker.py  behavior.py  community.py  daemon.py  dashboard.py  dpi.py  ebpf_spy.py  fingerprint.py  forensics.py  geoip.py  guardian.py  honeypot.py  hunter.py  logger.py  main.py  mitigation.py  pdf_engine.py  report_generator.py  reputation.py  scanner.py  server.py  shield.py  sniffer.py  swarm.py  temp.js  test_alerts.py  test_api.py  test_conns.py  test_shield.py  test_whitelist.py  threat.py  verify_phase3.py  vt_engine.py  yara_scanner.py
linux_pkg/: kharma.rb  snapcraft.yaml  winget.yaml
snap/: snapcraft.yaml
tmp/: test_web_security.py
(+24 files in other folders)
