[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kharma-sentinel"
version = "1.0.0"
authors = [
    { name = "Mutasem" }
]
description = "Advanced Offensive Intelligence & Real-Time Active Defense Suite"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["security", "radar", "network", "defense", "intelligence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "flask",
    "psutil",
    "requests",
    "pyjwt",
    "cryptography",
    "rich",
    "click",
    "reportlab"
]

[project.urls]
Homepage = "https://github.com/Mutasem-mk4/kharma-network-radar"

[project.scripts]
kharma = "kharma.main:main"
